--- a/index.html
+++ b/index.html
@@ -17,58 +17,58 @@
       </div>
       <div class="grid__row">
         <div class="grid__col--1">
-          <button class="button" data-value="7" data-js="num-Input"/>7</button>
+          <button class="button" data-value="7" data-js="num-Input">7</button>
         </div>
         <div class="grid__col--1">
-          <button class="button" data-value="8" data-js="num-Input"/>8</button>
+          <button class="button" data-value="8" data-js="num-Input">8</button>
         </div>
         <div class="grid__col--1">
-          <button class="button" data-value="9" data-js="num-Input"/>9</button>
+          <button class="button" data-value="9" data-js="num-Input">9</button>
         </div>
         <div class="grid__col--1">
           <button class="operator" data-value="/" data-js="set-Operation">/</button>
         </div>
       </div>
-    <div clas="grid__row">
+    <div class="grid__row">
       <div class="grid__col--1">
-        <button class="button" data-value="4" data-js="num-Input"/>4</button>
+        <button class="button" data-value="4" data-js="num-Input">4</button>
       </div>
       <div class="grid__col--1">
-        <button class="button" data-value="5" data-js="num-Input"/>5</button>
+        <button class="button" data-value="5" data-js="num-Input">5</button>
       </div>
       <div class="grid__col--1">
-        <button class="button" data-value="6" data-js="num-Input"/>6</button>
+        <button class="button" data-value="6" data-js="num-Input">6</button>
       </div>
       <div class="grid__col--1">
-        <button class="operator" data-value="*" data-js="set-Operation('multiply')"/>x</button>
+        <button class="operator" data-value="*" data-js="set-Operation('multiply')">x</button>
       </div>
     </div>
     <div class="grid__row">
       <div class="grid__col--1">
-        <button class="button" data-value="1" data-js="num-Input"/>1</button>
+        <button class="button" data-value="1" data-js="num-Input">1</button>
       </div>
       <div class="grid__col--1">
-        <button class="button" data-value="2" data-js="num-Input"/>2</button>
+        <button class="button" data-value="2" data-js="num-Input">2</button>
       </div>
       <div class="grid__col--1">
-        <button class="button" data-value="3" data-js="num-Iput"/>3</button>
+        <button class="button" data-value="3" data-js="num-Iput">3</button>
       </div>
       <div class="grid__col--1">
-        <button class="operator" data-value="-" data-js="set-Operation('subtract')"/>-</button>
+        <button class="operator" data-value="-" data-js="set-Operation('subtract')">-</button>
       </div>
     </div>
     <div class="grid__row">
       <div class="grid__col--1">
-        <button class="button" data-value="0" data-js="num-Input"/>0</button>
+        <button class="button" data-value="0" data-js="num-Input">0</button>
       </div>
       <div class="grid__col--1">
-        <button class="operator" data-value="." data-js="insertDecimal('.')"/>.</button>
+        <button class="operator" data-value="." data-js="insertDecimal('.')">.</button>
       </div>
       <div class="grid__col--1">
-        <button class="operator" data-value="=" data-js="calculate()"/>=</button>
+        <button class="operator" data-value="=" data-js="calculate()">=</button>
       </div>
       <div class="grid__col--1">
-        <button class="operator" data-value="+" data-js="set-Operation('add')"/>+</button>
+        <button class="operator" data-value="+" data-js="set-Operation('add')">+</button>
       </div>
     </div>
   </form>
