--- a/index.html
+++ b/index.html
@@ -1,77 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Calculator</title>
+  <link rel="stylesheet" href="styles/main.css" media="screen" title="no title" charset="utf-8">
+</head>
   <body>
-    <form class="form" action="index.html" method="post" data-js="form">
-      <div class="grid__row">
-        <div class="grid__col--1">
-          <button data-value="C" data-js="clearDisplay()" class="button">C</button>
-        </div>
-        <div class="grid__col--3">
-          <h2 type="text" class="calcDisplay" data-js="cal-output"></h2>
-        </div>
+    <div class="calculator">
+      <div class="top">
+        <span class="clear">C</span>
+        <div class="screen"></div>
       </div>
-      <div class="grid__row">
-        <div class="grid__col--1">
-          <button class="button" data-value="7" data-js="num-Input">7</button>
-        </div>
-        <div class="grid__col--1">
-          <button class="button" data-value="8" data-js="num-Input">8</button>
-        </div>
-        <div class="grid__col--1">
-          <button class="button" data-value="9" data-js="num-Input">9</button>
-        </div>
-        <div class="grid__col--1">
-          <button class="operator" data-value="/" data-js="set-Operation">/</button>
-        </div>
+      <div class="keys">
+        <span>7</span>
+        <span>8</span>
+        <span>9</span>
+        <span class="operator">+</span>
+        <span>4</span>
+        <span>5</span>
+        <span>6</span>
+        <span class="operator">-</span>
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+        <span class="operator">÷</span>
+        <span>0</span>
+        <span>.</span>
+        <span class="eval">=</span>
+        <span class="operator">x</span>
       </div>
-    <div class="grid__row">
-      <div class="grid__col--1">
-        <button class="button" data-value="4" data-js="num-Input">4</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="button" data-value="5" data-js="num-Input">5</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="button" data-value="6" data-js="num-Input">6</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="operator" data-value="*" data-js="set-Operation('multiply')">x</button>
-      </div>
-    </div>
-    <div class="grid__row">
-      <div class="grid__col--1">
-        <button class="button" data-value="1" data-js="num-Input">1</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="button" data-value="2" data-js="num-Input">2</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="button" data-value="3" data-js="num-Iput">3</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="operator" data-value="-" data-js="set-Operation('subtract')">-</button>
-      </div>
-    </div>
-    <div class="grid__row">
-      <div class="grid__col--1">
-        <button class="button" data-value="0" data-js="num-Input">0</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="operator" data-value="." data-js="insertDecimal('.')">.</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="operator" data-value="=" data-js="calculate()">=</button>
-      </div>
-      <div class="grid__col--1">
-        <button class="operator" data-value="+" data-js="set-Operation('add')">+</button>
-      </div>
-    </div>
-  </form>
-  </body>
+  </div>
+
+</body>
   <script type="text/javascript" src="JS/main.js"></script>
 </html>
